# Crafter

./: .gitmodules  settings.gradle
Android/: build.gradle
Android/src/androidTest/java/com/smallville7123/crafter/: ExampleInstrumentedTest.java
Android/src/main/: AndroidManifest.xml
Android/src/main/cpp/: CMakeLists.txt  jni.cpp
Android/src/main/java/com/smallville7123/crafter/: GLCubeView.java  MagnumEGLSurfaceView.java  MagnumEGLTextureView.java  MainActivity.java  MotionEventSerializer.java
Android/src/main/java/com/smallville7123/crafter/egl/: EGLSurfaceView.java  EGLTextureView.java
Android/src/main/res/values/: themes.xml
Android/src/main/res/values-night/: themes.xml
Android/src/test/java/com/smallville7123/crafter/: ExampleUnitTest.java
MacOS/: .gitignore  CMakeLists.txt
MacOS/debug_EXECUTABLE/: App
MacOS/src/: MeshHelper.cpp  MeshHelper.h  MyApplication.cpp  NDC.cpp  NDC.h
gradle/wrapper/: gradle-wrapper.properties
